--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -222,31 +222,31 @@
 
   PB_SCA_A_Truely_American_Revolution:0 "A Truely American Revolution"
   PB_SCA_A_Truely_American_Revolution_desc:0 "\n\n\n\n\n\nThe United Commonwealth sits far from our grasp, growing fat and complacent whilst our state readies itself for its greatest trial of dedication and will. The Wild West will be liberated, whether it wants to be or not."
-  SCA_Incite_Rev_In_FRE:0 "[FRE.GetFlag] Incite Revolution in [FRE.GetName]"
+  SCA_Incite_Rev_In_FRE:0 "Incite Revolution in [FRE.GetName]"
   SCA_Incite_Rev_In_FRE_desc:0 "Freedonia is a nation of fools and misplaced theories of freedom. They may burn a bright light of opposition to the Commonwealth but their beliefs will produce results like the Indians of old. Let us march north and bring the guiding light of revolution into their hearts, wether they want it or not."
-  SCA_Incite_Rev_In_DES:0 "[DES.GetFlag] Incite Revolution in [DES.GetName]"
+  SCA_Incite_Rev_In_DES:0 "Incite Revolution in [DES.GetName]"
   SCA_Incite_Rev_In_DES_desc:0 "There is no greater a victim of religious rot than the nation of New Zion. Once proud American families turned mindless drones in servitude to not only a false God, but an inherently destructive social life. Husbands with numerous wifes and children with numerous mothers, let us destroy these corrosive ideals once and for all. "
-  SCA_Incite_Rev_In_NEV:0 "[NEV.GetFlag] Incite Revolution in [NEV.GetName]"
+  SCA_Incite_Rev_In_NEV:0 "Incite Revolution in [NEV.GetName]"
   SCA_Incite_Rev_In_NEV_desc:0 "If American beliefs were shot out into the Latino world they would land directly into the nation of Nevada. The so-called casino capital of the Americas Nevada has long overstayed its welcome into the Wild West, its time for them to pack up shop and move on back into the Vestigial Mexican Empire."
-  SCA_Incite_Rev_In_SHO:0 "[SHO.GetFlag] Incite Revolution in [SHO.GetName]"
+  SCA_Incite_Rev_In_SHO:0 "Incite Revolution in [SHO.GetName]"
   SCA_Incite_Rev_In_SHO_desc:0 "The Pi'a-pa Confederation is nothing more than a nation run by the near extinct Indians. Whilst we sympathize with their struggle unfortunately the tide of civilization has come knocking on their door. They are after all just in the way of our revolutionary cause."
-  SCA_Incite_Rev_In_APA:0 "[APA.GetFlag] Incite Revolution in [APA.GetName]"
+  SCA_Incite_Rev_In_APA:0 "Incite Revolution in [APA.GetName]"
   SCA_Incite_Rev_In_APA_desc:0 "Apacheria is a nation of foolish Indians. Believing that they are some superior race of warriors stemming the offensive of western civilization. They are greatly mistaken however, while they may interpret us as being the same colonial criminals of old this couldn't be further from the truth. Sadly the time for convincing is over, only sword in hand will change their opinions about us."
-  SCA_Incite_Rev_In_CMC:0 "[CMC.GetFlag] Incite Revolution in [CMC.GetName]"
+  SCA_Incite_Rev_In_CMC:0 "Incite Revolution in [CMC.GetName]"
   SCA_Incite_Rev_In_CMC_desc:0 "Just like the Pi'a-pa Confederation, the Commanche are just simply in our way, its nothing personal but they won't understand."
-  SCA_Incite_Rev_In_GRN:0 "[GRN.GetFlag] Incite Revolution in [GRN.GetName]"
+  SCA_Incite_Rev_In_GRN:0 "Incite Revolution in [GRN.GetName]"
   SCA_Incite_Rev_In_GRN_desc:0 "Grangerland is nation ripe with flawed thinking, they may claim to be a country for the people but they are nothing more than another state following the misinterpreted ways of Bismark-socialism. Such a shame really."
-  SCA_Incite_Rev_In_NRT:0 "[NRT.GetFlag] Incite Revolution in [NRT.GetName]"
+  SCA_Incite_Rev_In_NRT:0 "Incite Revolution in [NRT.GetName]"
   SCA_Incite_Rev_In_NRT_desc:0 "America is no place for petty kings and their blind followers, if Norton wishes to play king then let us kick him back to Europe where he belongs."
-  SCA_Incite_Rev_In_IRO:0 "[IRO.GetFlag] Incite Revolution in [IRO.GetName]"
+  SCA_Incite_Rev_In_IRO:0 "Incite Revolution in [IRO.GetName]"
   SCA_Incite_Rev_In_IRO_desc:0 "Kelly and his corrupt dogs are the worst of the worst. Driven by nothing more than the want for wealth, the Kelly Gang represents the worst aspects of American society, let us change this."
-  SCA_Incite_Rev_In_MRN:0 "[MRN.GetFlag] Incite Revolution in [MRN.GetName]"
+  SCA_Incite_Rev_In_MRN:0 "Incite Revolution in [MRN.GetName]"
   SCA_Incite_Rev_In_MRN_desc:0 "The Marooner Republic fought for its freedom from slavery. The sad part is that they are still slaves, instead of being under the servitude of stupid Dixie pigs they instead bend the knee to false democractic bureaucrats who want nothing more than to line their pockets with coin."
-  SCA_Incite_Rev_In_OSA:0 "[OSA.GetFlag] Incite Revolution in [OSA.GetName]"
+  SCA_Incite_Rev_In_OSA:0 "Incite Revolution in [OSA.GetName]"
   SCA_Incite_Rev_In_OSA_desc:0 "Osage has been in a state of decline since European settlement, instead of embracing the future they stick to aged traditions and beliefs. Whilst peace is preferable their presence is a geo-political threat to our nations stability."
-  SCA_Incite_Rev_In_DER:0 "[DER.GetFlag] Incite Revolution in [DER.GetName]"
+  SCA_Incite_Rev_In_DER:0 "Incite Revolution in [DER.GetName]"
   SCA_Incite_Rev_In_DER_desc:0 "Mercenaries may have no ideological care for their nation but they still pose a threat to our nations march east. We shall cut them down and restore order and stability onto the regions they control. "
-  SCA_Incite_Rev_In_STA:0 "[STA.GetFlag] Incite Revolution in [STA.GetName]"
+  SCA_Incite_Rev_In_STA:0 "Incite Revolution in [STA.GetName]"
   SCA_Incite_Rev_In_STA_desc:0 "Rockeffeller? If I find that fucker I'll gut him like a pig. - Unknown Continental soldier upon hearing the collapse of Sante Fe and establishment of the Union Standard Oil Company."
   SCA_Core_892:0 "Core East Interior Territory"
   SCA_Core_892_desc:0 "Let us integrate our newly liberated lands into our revolutionary way of life and thinking. We must remind ourselves that this revolution is after all a global revolution as much as it is an American one."
@@ -967,16 +967,16 @@
   SCA_War_Is_A_Racket_desc:0 "War is a racket. After years of being the lapdog for wall street’s richest men Butler and his devout followers have accomplished what many thought to be impossible. Thousands have died, millions have been affected, and the entirety of North America has forever been changed. This continent, our home, will always remain a place of division, revolution, and death, but it is also a place rich with history and struggle. Let us now rebuild the old into anew and put finally finish what we sent out to do; that is bringing the revolution back home and into the hearts of all freedom loving Americans. "
 
   SCA_The_Great_American_Experiment:0 "The Great American Experiment"
-  SCA_The_Great_American_Experiment_desc:0 ""
+  SCA_The_Great_American_Experiment_desc:0 "The patronage of Butler was once necessary in the revolution’s darkest days, but voices of opposition now cry out for the liberty they were long promised. No longer will Butler be the soul voice guiding the revolution: now a whole chorus of voices will be singing the hymns of the new republic! From this day forward the corrupt and despotic systems of old will be replaced by a truly revolutionary democracy. One that the world will look to as its guide, as a shining city upon a hill."
 
   SCA_President_For_Life:0 "President For Life"
-  SCA_President_For_Life_desc:0 ""
+  SCA_President_For_Life_desc:0 "While many want to have a say in how our nation is run, we cannot allow such decisions to be handled by the people. While many are intelligent and well educated, few have experience in nation scale leadership. Our nation's future should thereby be decided not by revolutionary democracy, but revolutionary autocracy. By establishing Butler as President for Life, he need to worry about politics or congressional debate. He can instead focus on ruling our nation with a just and fair hand. With absolute power, he can act firmly and quickly, responding to threats without concern for parliamentary procedure. Some may call us tyrants, but when they see what we can accomplish with this power, they'll be thankful for it."
 
   SCA_The_Tribunal_For_American_War_Criminals:0 "The Tribunal For American War Criminals"
   SCA_The_Tribunal_For_American_War_Criminals_desc:0 ""
 
   SCA_Establish_The_Interim_Government:0 "Establish The Interim Government"
-  SCA_Establish_The_Interim_Government_desc:0 ""
+  SCA_Establish_The_Interim_Government_desc:0 "After many great battles, both military and otherwise, victory has finally been achieved. As we make our way from a revolutionary insurgency to a fully fledged nation, we must begin work on ensuring our government and the many changes we have brought survive this transition. To this end, an interim 'reconstruction; government to handle repairing the damage that our campaign of liberation has brought. Both the physical damage but also repairing the scars of the region's former occupiers. Once we have done so, the world and the people will know what we can bring."
 
   SCA_Department_Of_Aeronautics:0 "The American Revolutionary Airforce"
   SCA_Department_Of_Aeronautics_desc:0 "For some time, we remained completely helpless in the battlefield of the sky. Our planes were few and far between, we instead relied on Anti-Air defences to save us. But as the war with the Commonwealth ends, those few pilots have proven themselves to be some of the finest soldiers in our nation. Through them we will create a core of professional pilots to train the next generation, ensuring that our enemies will sleep under a revolutionary sky!"
@@ -988,7 +988,7 @@
   SCA_Department_Of_Naval_Affairs_desc:0 "Prior to our expansion, the Navy we possessed was limited to a small coast guard that would not last long against any professional force. However, with a wider coastline secured, the industry to support it, and access to experienced naval personnel we can now work on expanding our Navy. Though the exact form it will take has not been decided, we will have one nonetheless. A fleet ready to defend our coast and ensure that the blue seas of the world will not be barriers but transport links for out revolution."
 
   SCA_The_New_America_Campaign:0 "The New America Campaign"
-  SCA_The_New_America_Campaign_desc:0 ""
+  SCA_The_New_America_Campaign_desc:0 "Throughout the Reclamation War, due to a combination of the Commonwealth's Scorched Earth retreat and some of our own over-zealous forces, the industry of the former Commonwealth territories is in ruins. Few factories are intact, fewer still are at maximum efficiency. If we are to wield the might that we have earned through blood and steel, we must work at haste to rebuild the damage done. Resources must be redirected toward providing the materials needed to not only fix the industrial set backs, but also to improve the lives of those in the occupied territories. "
 
   SCA_Ministry_Of_The_Exterior:0 "Ministry Of The Exterior"
   SCA_Ministry_Of_The_Exterior_desc:0 ""
@@ -1126,7 +1126,7 @@
 
   SCA_Our_Great_March_East_tt:0 "The Sic Semper Tyrannis §YFocus Tree§! will load which grants:\n\n£GFX_decision_icon_small Decisions to declare war on specific Minor American countries\n\n£GFX_decision_icon_small Decisions to majorly expand the nations economy\n\n£GFX_decision_icon_small Decisions to prepare for the war with the  [AME.getflag] United Commonwealth\n\nThere are certain path unique decisions and mechanics"
   
-  SCA_A_Truly_American_Revolution_tt:0 "The The All-American Reclamation Committee §YFocus Tree§! will load which grants:\n\n£GFX_decision_icon_small Decisions to declare war on specific Minor American countries\n\n£GFX_decision_icon_small Decisions to majorly expand the nations economy\n\n£GFX_decision_icon_small Decisions to prepare for the war with the  [AME.getflag] United Commonwealth\n\nDepending on whether you chose the Dawn of the People's Council focus or the Butlerite Proclamation focus you will get different post-unification trees."
+  SCA_A_Truly_American_Revolution_tt:0 "The The All-American Reclamation Committee §YFocus Tree§! will load.\n\nDepending on whether you chose the Dawn of the People's Council focus or the Butlerite Proclamation focus you will get different post-unification trees."
 
   SCA_Hide_From_The_Giant_tt:0 "The £GFX_decision_icon_small §YHide From The Giant§! Decision cost is now calculated by the number of £GFX_manpower_texticon  Divisions you have mobilized instead of the number of £GFX_manpower_texticon  Battalions"
   
