More Philipino War Balancing

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -3101,6 +3101,30 @@ PRU_an_ADJ:0 "Peruvian"
  BOX_cn_ADJ:0 "Chinese"
  BOX_an_ADJ:0 "Chinese"
 
+
+ FSM_ni:0 "Second Saudeleur Dynastic Empire"
+ FSM_ni_DEF:0 "the Saudeleur Dynastic Empire"
+ FSM_cn:1 "Federated States of Micronesia"
+ FSM_cn_DEF:1 "the Federated States of Micronesia"
+ FSM_jc:0 "Greater Pohnpei Union State"
+ FSM_jc_DEF:0 "the Greater Pohnpei Union State"
+ FSM:0 "Micronesia"
+ FSM_DEF:0 "Micronesia"
+ FSM_ADJ:0 "Micronesian"
+ FSM_democratic_ADJ:0 "Micronesian"
+
+ PNG_ni:1 "Papua"
+ PNG_ni_DEF:1 "Papua"
+ PNG_cn:0 "Papua New Guinea"
+ PNG_cn_DEF:0 "Papua New Guinea"
+ PNG_ds:1 "Federation of Papuan Peoples"
+ PNG_ds_DEF:1 "the Federation of Papuan Peoples"
+ PNG_jc:1 "United Papuan Communes"
+ PNG_jc_DEF:1 "United Papuan Communes"
+ PNG:0 "Papua"
+ PNG_DEF:0 "Papua"
+ PNG_ADJ:0 "Papuan"
+
  NPF_ni:0 "National Protection Front"
  NPF_ni_DEF:0 "the National Protection Front"
  NPF_ds:0 "National Protection Front"
