--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -682,6 +682,10 @@
  VICTORY_POINTS_1208:0 "Kuching"
  VICTORY_POINTS_10199:0 "Sandakan"
  VICTORY_POINTS_7371:0 "Miri"
+ VICTORY_POINTS_1421:0 "Zamboanga"
+ VICTORY_POINTS_10243:0 "Cagayan"
+ VICTORY_POINTS_4429:0 "Puerto Princesa"
+ VICTORY_POINTS_1224:0 "Tacloban"
  VICTORY_POINTS_7617:0 "Colón"
  VICTORY_POINTS_7940:0 "Golmud"
  VICTORY_POINTS_7960:0 "Abu Dhabi"
