--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -73,17 +73,24 @@
   PB_Universal_Basic_SCA:0 "Basic Education System"
 
   PB_SCA_Wild_West_No_Longer:0 "The Tamed West"
+  PB_SCA_Wild_West_No_Longer_desc:0 "The days of cowboys and lawlessness is coming to an end, bureaucracy and the authority of nations has brought the demise of this once rugged way of life. Today a horse is as about as useful as a rock when it comes to traversing the great lengths of the American west; instead, trains and motorized technologies have taken the place of flesh and muscle. To ignore these changes is to be ignorant, and to fight against them is simply suicidal."
   PB_SCA_Wild_West_No_Longer_1:0 "The Tamed West"
+  PB_SCA_Wild_West_No_Longer_1_desc:0 "The days of cowboys and lawlessness is coming to an end, bureaucracy and the authority of nations has brought the demise of this once rugged way of life. Today a horse is as about as useful as a rock when it comes to traversing the great lengths of the American west; instead, trains and motorized technologies have taken the place of flesh and muscle. To ignore these changes is to be ignorant, and to fight against them is simply suicidal."
   PB_SCA_Wild_West_No_Longer_2:0 "The Tamed West"
+  PB_SCA_Wild_West_No_Longer_2_desc:0 "The days of cowboys and lawlessness is coming to an end, bureaucracy and the authority of nations has brought the demise of this once rugged way of life. Today a horse is as about as useful as a rock when it comes to traversing the great lengths of the American west; instead, trains and motorized technologies have taken the place of flesh and muscle. To ignore these changes is to be ignorant, and to fight against them is simply suicidal."
   PB_SCA_Wild_West_No_Longer_3:0 "The Tamed West"
+  PB_SCA_Wild_West_No_Longer_3_desc:0 "The days of cowboys and lawlessness is coming to an end, bureaucracy and the authority of nations has brought the demise of this once rugged way of life. Today a horse is as about as useful as a rock when it comes to traversing the great lengths of the American west; instead, trains and motorized technologies have taken the place of flesh and muscle. To ignore these changes is to be ignorant, and to fight against them is simply suicidal."
 
   PB_SCA_Mobolize_The_Workers:0 "Mobolize The Workers"
   PB_SCA_Mobolize_The_Workers_2:0 "Mobolize The Workers"
   PB_SCA_Mobolize_The_Workers_3:0 "Mobolize The Workers"
 
   PB_SCA_Sic_Semper_Tyrannis:0 "Sic Semper Tyrannis"
+  PB_SCA_Sic_Semper_Tyrannis_desc:0 "It is not death that a man should fear, but he should fear never beginning to live. - Marcus Aurelius"
   PB_SCA_Sic_Semper_Tyrannis_2:0 "Sic Semper Tyrannis"
+  PB_SCA_Sic_Semper_Tyrannis_2_desc:0 "It is not death that a man should fear, but he should fear never beginning to live. - Marcus Aurelius"
   PB_SCA_Sic_Semper_Tyrannis_3:0 "Sic Semper Tyrannis"
+  PB_SCA_Sic_Semper_Tyrannis_3_desc:0 "It is not death that a man should fear, but he should fear never beginning to live. - Marcus Aurelius"
 
   PB_SCA_Grain_Shortage:0 "Crippling Grain Shortage"
 
@@ -1012,7 +1019,7 @@
   SCA_The_Tonkaliwako_Accord_desc:0 ""
 
   SCA_Approach_Copenhagen:0 "The Greenland Purchase"
-  SCA_Approach_Copenhagen_desc:0 ""
+  SCA_Approach_Copenhagen_desc:0 "Though largely devoid of natural resources and its population being mostly Danish, ownership of Greenland would coffer certain benefits. Namely its strategic position in the Atlantic ocean would allow our fleets to better patrol and secure those waters. However, given the distance between it and our own borders, along with the harshness of Greenland itself and possible international backlash, an invasion is out of the question. Instead we must seek to purchase the island from Denmark. If they agree, we will gain the island. If they refuse then we will have to suck it up and move on with our lives."
 
   SCA_Red_Liberty_Calling:0 "Red Liberty Calling"
   SCA_Red_Liberty_Calling_desc:0 ""
@@ -1084,7 +1091,7 @@
   SCA_Fight_Against_Futurism_desc:0 ""
 
   SCA_The_Capital_Question:0 "The Capital Question"
-  SCA_The_Capital_Question_desc:0 ""
+  SCA_The_Capital_Question_desc:0 "Now that our rule has been cemented it is time to decide what our permanent capital will be. The symbolism of our choice will important, so we have whittled the candidates down to four major cities:\n\nNew York is an obvious choice to many, being our largest and most modern city it represents our dedication to a prosperous future- but the stain of capitalism will be hard to remove from the historically decadent city.\n\nThe next candidate is Boston, a very symbolic choice for it was where the first American Revolution began. For the party faithful there is no city more suitable to house our revolution. However, some of our comrades have also suggested the original home of our revolution be the capital: Libertyville. Although more isolated from the urban centres of the east, its loyalty to the our cause is unquestionable and deserves recognition.\n\nFinally, a contingent of supporters have formed around Chicago being our capital. Like New York, it is a modern city of immense prestige and technological marvel, and its central location makes it perfect to project our influence over our nation. But it is not without controversy: being under Quebecois rule for so long has created a culture unlike our own, which may be more difficult to accommodate.\n\nAs always, the choice is yours to make. "
 
   ##########################
   # TOOLTIPS/FLAGS/COSMETIC/TRAITS/PARTIES
@@ -1386,7 +1393,7 @@
   SCA20desc:0 "" 
   SCA20opta:0 "New York"
   SCA20optb:0 "Boston"
-  SCA20optc:0 "Our Current Capital is fine"
+  SCA20optc:0 "Chicagou"
 
   SCA21title:0 "The American Cromwell"
   SCA21desc:0 "" 
@@ -1459,7 +1466,7 @@
   SCA35opta:0 "Where all the roads have ended, the path we walk has not."
 
   SCA36title:0 "A Letter In Dust"
-  SCA36desc:0 "To all those who it may conceingn:\n\nWe are aware of the increasing number of celestials coming into the city from the south and are doing everything to solve this situation.\n\nThe celestials who were questioned said that the country of Meizhou was taken over by refugees from the east, which caused the local population to flee north.\n\nI have ordered a construction of a special district for chinese families in the outskirts of the city to resolve the issue without disturbing the New Virginian way of life.\n\nAdditionally, I have asked the government to investigate these so-called "refugees from the east" to find out their motives and identity. We will update you as soon as the investigation is concluded.\n\nSincerely, Mayor of New Virginia" 
+  SCA36desc:0 "To all those who it may conceingn:\n\nWe are aware of the increasing number of celestials coming into the city from the south and are doing everything to solve this situation.\n\nThe celestials who were questioned said that the country of Meizhou was taken over by refugees from the east, which caused the local population to flee north.\n\nI have ordered a construction of a special district for chinese families in the outskirts of the city to resolve the issue without disturbing the New Virginian way of life.\n\nAdditionally, I have asked the government to investigate these so-called "refugees from the east" to find out their motives and identity. We will update you as soon as the investigation is concluded.\n\nSincerely, Mayor of New Libertyville" 
   SCA36opta:0 "Where all the roads have ended, the path we walk has not."
 
   SCA37title:0 "A Bottle A Day"
