--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -316,6 +316,21 @@
  RUS_infantry_equipment_3:0 "Avtomat Rifle - Kinetic Type 1"
  RUS_infantry_equipment_3_short:0 "AVR-KT1"
 
+ AME_infantry_equipment_0:0 "Pedersen Rifle Model 1918"
+ AME_infantry_equipment_0_short:0 "RM 18"
+
+ AME_infantry_equipment_1933:0 "Pedersen Rifle Model 1933"
+ AME_infantry_equipment_1933_short:0 "RM 33"
+
+ AME_infantry_equipment_1:0 "Garand Rifle 52"
+ AME_infantry_equipment_1_short:0 "GR 52 "
+
+ AME_infantry_equipment_2:0 "Sniperworks Full Automatic Rifle 40"
+ AME_infantry_equipment_2_short:0 "SFM 40 "
+
+ AME_infantry_equipment_3:0 "Experimental Decrompession Rifle XI"
+ AME_infantry_equipment_3_short:0 "EX XI "
+
  infantry_weapons1933:0 "Infantry Equipment II"
  infantry_weapons1933_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs. Improved weapon models and more specialized equipment."
 
