--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -1407,8 +1407,7 @@
 
   SCA23title:0 "War Plan: East"
   SCA23desc:0 "" 
-  SCA23opta:0 "Our interests lay with the Commonwealth"
-  SCA23optb:0 "Total War!"
+  SCA23opta:0 "Total War!"
 
   SCA24title:0 "The Future of the North?"
   SCA24desc:0 "" 
