--- a/localisation/english/PB_peace_popup_l_english.yml
+++ b/localisation/english/PB_peace_popup_l_english.yml
@@ -81,7 +81,7 @@
 
  PB_PEACE_POPUP_FLAVOR_SCA_Victory:0 "The American revolutionary fire burns a little brighter."
  PB_PEACE_POPUP_FLAVOR_SCA_Loss:0 "The American utopia lives no more."
- PB_PEACE_POPUP_FLAVOR_SCA_AME_Victory:0 "War is just a racket. A racket is best described, I believe, as something that is not what it seems to the majority of people. Only a small inside group knows what it is about. It is conducted for the benefit of the very few at the expense of the masses."
+ PB_PEACE_POPUP_FLAVOR_SCA_AME_Victory:0 "War is just a racket. A racket is best described, I believe, as something that is not what it seems to the majority of people. Only a small inside group knows what it is about."
 
  PB_PEACE_POPUP_WAR_CONCLUSION_PHI_DAS_Victory_Flavor:0 "Even if my country does seem to have forgotten me, I have always thought about it."
  PB_PEACE_POPUP_WAR_CONCLUSION_DAS_PHI_Victory_Flavor:0 "When the people reach that height, God will provide a weapon, the idols will be shattered, and tyranny will crumble like a house of cards"
