Caucasian Shenanigans Part 1

--- a/localisation/english/PB_CoE_l_english.yml
+++ b/localisation/english/PB_CoE_l_english.yml
@@ -75,6 +75,13 @@
   PB_CoE_Integrate_Belarus_with_Warsaw:0 "Include Belarus in the Międzymorze"
   PB_CoE_Integrate_Belarus_with_Warsaw_desc:0 "-"
 
+  PB_CoE_Solidify_Caucasian_Unity:0 "Establish a Unitary Caucasus"
+  PB_CoE_Solidify_Caucasian_Unity_desc:0 "While native voices inside the Caucasian mandate have been rather vocal about their support for total independence of their respective homelands, the delegations remain sceptical about the prospect. Dividing the Caucasus is a recipe for interstate conflict and ethnic tension, so the decision has been made to formalize the international mandate in Tblisi into a unified state." 
+  PB_CoE_Disunite_the_Region:0 "Dissolve the CIM"
+  PB_CoE_Disunite_the_Region_desc:0 "The Caucasian International Mandate has ran its course and, with the voice of independence growing louder, the Caucasus should be divided along ethnic lines. Armenians, Georgians and Azeris all seek to establish their independence and we should hear them out." 
+  PB_CoE_Grant_Ankara_Armenia:0 "Grant Ankara an Armenian Mandate"
+  PB_CoE_Grant_Ankara_Armenia_desc:0 "Having tested the waters for a while, the Turks have finally come to the Conference with the proposal of granting them a mandate over the admnistration of Armenia. Practically turning the new independent state into a puppet of Osman, granting the Turks the mandate would fulfill their desires over some Caucasian control and may be a good way to placate the Osman delegation." 
+
   PB_CoE_France_as_topic:0 "Discussing France"
   PB_CoE_Spain_as_topic:0 "Discussing Spain"
   PB_CoE_Italy_as_topic:0 "Discussing Italy"
@@ -89,6 +96,8 @@
   Coe_get_topic_Portugal:0 "§GPortugal§!"
   Coe_get_topic_Poland:0 "§GPoland§!"
   Coe_get_topic_Baltics:0 "§GBaltics§!"
+  Coe_get_topic_Belarus:0 "§GBelarus§!"
+  Coe_get_topic_Caucasus:0 "§GCaucasus§!"
 
   Coe_proposed_plan:0 "§YProposed the Plan§! (Automatic §GApproval§!)"
 
@@ -97,6 +106,7 @@
   PB_COE_PROPOSAL_SCHWARZ:0 "The \"§YSchwarz Plan§!\" is currently discussed."
 
   POL_GOV:0 "Has chosen a §YPolish government§!."
+  PB_COE_FRA_GOV_CHOSEN:0 "Has chosen a §YFrench government§!."
 
   COE_IF_APPROVED:0 "\nIf the proposal is §Gapproved§!:" 
 
@@ -281,6 +291,24 @@
   COE.57.t:0 "Finland accepts Estonian Proposal"
   COE.57.d:0 "In a weird twist of fate, the Finnish have agreed to unify Estonia and Finland into a federation, not too dissimilair to Germany's federal system. Both nations hold onto their parliaments, independent armies and navies, but have agreed to slowly integrate more and more functions of government over time into a federal entity, allowing for a future union of equals."
   COE.57.a:0 "A weird conclusion, but at least a happy one!" 
+  COE.58.t:0 "Conference of Europe: Erzurum's Place"
+  COE.58.d:0 "-"
+  COE.58.a:0 "Grant the Armenians this land"
+  COE.58.b:0 "Our Turkish allies should govern here" 
+  COE.60.t:0 "Turkish delegation Leaves!"
+  COE.60.d:0 "In a huff, the Turkish delegation at the Conference of Europe has left after the recent decision to grant Erzurum to Armenia. Citing is as a stab in the back by the West after the war, the Turks have made the decision to leave the League of Nations entirely, having little faith in a world ruled by European powers who only care about the plight of good, Christian Europeans and little else."
+  COE.60.a:0 "A bad start for the League..." 
+  COE.61.t:0 "Armenia demands Erzurum Demilitarization"
+  COE.61.d:0 "\"In the name of peace and security for our homeland and the Caucasian region, we urge the League of Nations and the delegations present to demilitarize the Erzurum region and force Turkey to recognize such action. Without the necessary measures, the Armenian Republic is afraid that it may be endangered by Turkish ambition\". \n\nThe speech by the Armenian delegation has clearly upset the Turks, but has been met with civilized applause by the rest of the Conference. Demilitarization of the region would be a fantastic compromise to the question, as it would grant the Turks the region but would preserve its Armenian population through close monitoring by the League. Armenia's request is rather rare in its moderation and must be seriously examined." 
+  COE.61.a:0 "We agree to a demilitarization clause"
+  COE.61.b:0 "We trust Osman enough with the region, demilitarization isn't needed" 
+  COE.62.t:0 "Conference of Europe: Armenian Mandate"
+  COE.62.d:0 "The Conference has been rather silent after the Turkish delegation advocated for their proposed mandate of Armenia. The silence was short-lived, as the Armenian delegation immediately protested such action, declaring that the League sought to defeat imperialism, not support it. The situation demands an answer, as the two sides will not be able to find any common ground on this issue."
+  COE.62.a:0 "Grant the Turks their mandate"
+  COE.62.b:0 "The Armenians are right, we cannot allow this!" 
+  COE.63.t:0 "Armenian delegation Leaves!"
+  COE.63.d:0 "With the prospect of losing their independence being adopted and approved by London, Frankfurt and the other great powers, the Armenian delegation stood up without a word and left the Conference. It would become clear later that the Armenian government did not approve of the decision made by the Conference, forcing Yerevan to leave the League of Nations. With the current situation, the Turks are given the mandate to establish their administration over Armenia and are expected to enforce it later." 
+  COE.63.a:0 "Perhaps we made the wrong decision?" 
 
   COEDEXTER.1.t:0 "The Discussion of a Jewish Homeland"
   COEDEXTER.1.d:0 "As British diplomats seek to further placate us with their Dexter Plan, the proposal of German diplomats to carve some territory away from France and give it to the Jewish people has been given the green light by the Brits. The Jewish people have suffered immensely under the French dictatorship, seeing themselves stripped from citizenship, property and sometimes their lives. The least we can do is come together and repay the Jewish people, a globally persecuted people, with their own homeland in France. \n\nThe question now remains which French state to grant the Jewish people. Preferably, the territory has a coast and isn't already claimed by another country."
@@ -413,6 +441,14 @@
   EST_FINLAND:0 "Estonia"
   EST_FINLAND_DEF:0 "the Federal State of Estonia"
   EST_FINLAND_ADJ:0 "Estonian" 
+
+  TRS_KINGDOM:0 "Kingdom of the Caucasus"
+  TRS_KINGDOM_DEF:0 "the Mountain Kingdom of the Caucasus"
+  TRS_KINGDOM_ADJ:0 "Caucasian"
+ 
+  TRS_REPUBLIC:0 "Transcaucasia"
+  TRS_REPUBLIC_DEF:0 "the Transcaucasian Republic"
+  TRS_REPUBLIC_ADJ:0 "Transcaucasian" 
 
   #Ideas
 
