--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -914,9 +914,9 @@
   PBNews.231.d:0 "Reports coming from the American frontier echoe disturbing tales of an encroaching threat eastwards and towards the United Commonwealth. Some have stated that this apparent threat is nothing more than a lie mustered by wild west nations to add reason for their now openly hostile relations against one another. Others have said that this threat is in fact real and should be taken seriously. Whatever the case, the once peaceful nature of the Frontier has quickly changed to one of hostility. The question now remains as to who will be left standing?"
   PBNews.231.a:0 "Who? What? When?"
 
-
-
-
+  PBNews.232.t:0 "SCA DEFEATED"
+  PBNews.232.d:0 "Today marks the end of the deadliest conflict to ever have arisen on the North American continent. Philadelphia stated to the world that although it had defeated its most fearsome enemy yet, there was still much to be done with other, more global, affairs. The whereabouts of Butler are unknown but reports indicate that every effort is being made to find the man that nearly brought North America to its knees. Many are now waiting to find out what Philadelphia's plans are if they do manage to catch the so-called red bastard."
+  PBNews.232.a:0 "A sigh of relief for America no doubt."
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
