--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -1522,6 +1522,22 @@
   SCA48desc:0 "" 
   SCA48opta:0 "Blast!"
 
+  SCA49title:0 "Better Dead Than Red"
+  SCA49desc:0 "What was thought to be another everyday strike turned out to be the worst domestic political issue our nation has faced since the days of the Revolution of old. Almost a million father, sons, husbands, mothers, wives, and daughters marched to the west coast in the hopes of fleeing our administration. Instead, what they had achieved was some perverted autocratic nation of misguided believers, with their 'great dictator' being the insidious Butler. While efforts are underway to locate Smedley Butler our current immediate concerns are to bring order to these new lands we now occupy and to reassure the local populace that we hold no sinister interests." 
+  SCA49opta:0 "Butler was always a fool."
+
+  SCA50title:0 "Butler Escapes"
+  SCA50desc:0 "In a shock to local troops stationed in Oregon Butler was seen leaving Portland late last night by local eyewitnesses, of whom some had stated that a certain Smith family had helped keep the tyrant safe from then present authorities. After lengthy questioning of the Smith family the father John Smith had indeed confirmed that Butler was with the family until Japanese contacts had readied a boat for the tyrant to board. Mr. Smith then stated that the boat was heading back to Japan but nothing more was known of Butlers intentions or what the Japanese government would do exactly with him. Some government ministers believe that Japan will host a Jacobin American government in exile with Smedley Butler as a leading figure. It was also confirmed that a number of Butler’s closest allies were also on that boat however Mr. Smith stated that the family didn’t safeguard any other individuals of interest other than Butler. Further questioning didn’t produce any more substantial material however both Mr. and Mrs. Smith have been placed into police custody until their respective court hearings. All we can do is hope the dumb red bastard chokes on his way to Japan." 
+  SCA50opta:0 "HOW!"
+
+  SCA51title:0 "Butler Captured"
+  SCA51desc:0 "Local authorities in Portland have arrested Smedley Butler from a certain Smith residence after a tip was given by a local collaborator about his where abouts. Currently he is being transported to Salt Lake City where he will then be taken to the capital. The government has concluded that Butler shall not receive a trial and while some have criticized this most just want to see the bastard hanged, this certainly is the sentiment held by Philadelphia at least. The nation now waits to see one of the first government broadcasted executions on live television in the world, and who better to hold such a title than Butler himself." 
+  SCA51opta:0 "This revolution ends with a noose around Butler's neck"
+
+  SCA52title:0 "Butler Hanged"
+  SCA52desc:0 "At exactly 10:00 a.m. every channel across the nation was interrupted by a short government address, then followed by stories of victims of the Reclamation war. Reports were shared to all viewers about the atrocities Butler and his armies had conducted on the American people and those who inhabited the once wild west. The Prime Minister himself, [AME.GetLeader], had read a short letter by an American soldier who had witnessed the barbarity of Continental troops towards innocent Trekker families. The letter contained rather descriptive language of the actions conducted by such tyrannic armies and had nearly brought [AME.GetLeader] to tears.\n\nEventually the moment everyone had been waiting for had finally arrived, after a few short words by members of the committee for war crime affairs Butler was allowed to share some final moments with the America people by reading out loud a heavily edited speech. “American’s I have failed not only as leader and a general, but as an American. I hope whatever is to come of my defeat that you find it in your hearts to forgive the actions I and my armies have committed. Today marks a turning point in the history not only of this great nation and its peoples, but also the globe. As I am reading these words to you, I promise with every remaining breath I have in me that my cause was always intended to be noble. I now salute my fellow Americans, Sic Semper Tyrannis.” Butler would eventually be hung for his crimes against the American people and his final tussle against the restricting rope would spell the definitive end of the American Revolution." 
+  SCA52opta:0 "Sic Semper Tyrannis"
+
   ##########################
   # PUPPETS/AUTONOMIES
   ##########################
@@ -1571,6 +1587,22 @@
   MEX_SCA_Puppet:0 "Mexican People's United Republic"
   MEX_SCA_Puppet_DEF:0 "the Mexican People's United Republic"
   MEX_SCA_Puppet_ADJ:0 "Mexican"
+
+  ##########################
+  # AMERICA OCCUPATION STUFF
+  ##########################
+
+  AME_TAC_Puppet:0 "West Coast Port Authority"
+  AME_TAC_Puppet_DEF:0 "the West Coast Port Authority"
+  AME_TAC_Puppet_ADJ:0 "Cascadian"
+
+  AME_TAB_Puppet:0 "Autonomous Province of Deseret"
+  AME_TAB_Puppet_DEF:0 "the Autonomous Province of Deseret"
+  AME_TAB_Puppet_ADJ:0 "Mid-Western"
+
+  AME_SHO_Puppet:0 "Northbasin Occupation Zone"
+  AME_SHO_Puppet_DEF:0 "the Northbasin Occupation Zone"
+  AME_SHO_Puppet_ADJ:0 "American"
 
 
 
