small achievement fix

--- a/localisation/english/PB_achievements_l_english.yml
+++ b/localisation/english/PB_achievements_l_english.yml
@@ -1,10 +1,12 @@
 ﻿l_english:
 
-Not_So_Ancien_Regime:0 "Not So Ancien Regime"
-Not_So_Ancien_Regime_tt:0 "As Bourbon France, defeat the Imperial Powers."
+Not_So_Ancien_Regime_NAME:0 "Not So Ancien Regime"
+Not_So_Ancien_Regime_DESC:0 "As Bourbon France, defeat the Imperial Powers."
 
-Well_I_Didnt_Vote_for_You:0 "Well, I didn't Vote for You"
-Well_I_Didnt_Vote_for_You_tt:0 "Centralize the British Empire as a Despotist United Kingdom"
+Well_I_Didnt_Vote_for_You_NAME:0 "Well, I didn't Vote for You"
+Well_I_Didnt_Vote_for_You_DESC:0 "Centralize the British Empire as a Despotist United Kingdom"
 
-One_Chin_to_Rule_Them_All:0 "One Chin to Rule Them All"
-One_Chin_to_Rule_Them_All_tt:0 "Unite Europe as the United Kingdoms of Germany"
+One_Chin_to_Rule_Them_All_NAME:0 "One Chin to Rule Them All"
+One_Chin_to_Rule_Them_All_DESC:0 "Unite Europe as the United Kingdoms of Germany"
+
+pb_achievement_293847502038485773:0 "Pax Britannica Achievements"
